modificando inicio recepcionista

--- a/src/main/java/vista/Empleado/paneles/PanelReservas.form
+++ b/src/main/java/vista/Empleado/paneles/PanelReservas.form
@@ -768,7 +768,7 @@
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-            <LineBorder roundedCorners="true" thickness="2"/>
+            <LineBorder roundedCorners="true"/>
           </Border>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -780,7 +780,7 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="30" y="120" width="860" height="360"/>
+          <AbsoluteConstraints x="30" y="120" width="820" height="360"/>
         </Constraint>
       </Constraints>
 
@@ -809,7 +809,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="730" y="80" width="-1" height="-1"/>
+              <AbsoluteConstraints x="690" y="80" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -834,7 +834,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="630" y="80" width="80" height="-1"/>
+              <AbsoluteConstraints x="590" y="80" width="80" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -844,7 +844,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="20" y="130" width="810" height="200"/>
+              <AbsoluteConstraints x="20" y="130" width="770" height="200"/>
             </Constraint>
           </Constraints>
 
