--- a/src/main/java/vista/Empleado/paneles/PanelRecervarHabitaciones.form
+++ b/src/main/java/vista/Empleado/paneles/PanelRecervarHabitaciones.form
@@ -1053,8 +1053,14 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial Black" size="36" style="1"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de Recervas"/>
       </Properties>
@@ -1080,7 +1086,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="30" y="160" width="850" height="390"/>
+          <AbsoluteConstraints x="30" y="160" width="800" height="390"/>
         </Constraint>
       </Constraints>
 
@@ -1113,7 +1119,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="50" y="170" width="760" height="50"/>
+              <AbsoluteConstraints x="20" y="170" width="760" height="190"/>
             </Constraint>
           </Constraints>
 
@@ -1174,7 +1180,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="50" y="120" width="276" height="32"/>
+              <AbsoluteConstraints x="20" y="120" width="276" height="32"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -1199,7 +1205,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="340" y="120" width="86" height="35"/>
+              <AbsoluteConstraints x="310" y="120" width="86" height="35"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -1224,7 +1230,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="690" y="120" width="120" height="40"/>
+              <AbsoluteConstraints x="660" y="120" width="120" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
