--- a/src/main/java/vista/Empleado/paneles/PanelPerfil.form
+++ b/src/main/java/vista/Empleado/paneles/PanelPerfil.form
@@ -572,7 +572,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="PerfPerfil de Usuarioil"/>
+            <Property name="text" type="java.lang.String" value="Perfil Recepcionista"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
